Updated project link to go to github and resized images.

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 
             <!-- Portfolio Website -->
             <li class="project-item active" data-filter-item data-category="Website">
-              <a href="https://jordanlopez.dev" target="_blank">
+              <a href="https://github.com/JordanLopezDev/Personal-Portfolio-Website" target="_blank">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
